Implementacion de rutas para mobile y actualizacion de contrato OpenAPI
